@@ -957,6 +957,8 @@ Release 2.7.1 - UNRELEASED
     HDFS-8523. Remove usage information on unsupported operation
     "fsck -showprogress" from branch-2 (J.Andreina via vinayakumarb)
 
+    HDFS-8522. Change heavily recorded NN logs from INFO to DEBUG level. (xyao)
+
 Release 2.7.0 - 2015-04-20
 
   INCOMPATIBLE CHANGES
